# native_opencv

./: .gitignore  Readme
cmake/: CMakeLists.txt  build_android.sh  generate.sh
cmake/helloworld/: CMakeLists.txt  generate.sh  hello.cpp
cmake/lib/: CoImage.h  IVideoStitch.h  VideoStitch.h  stitchMgr.h  v4l2cap_img.cpp
cmake/test/: main.cpp  test.cpp
cmake/vcpp15/: MyArray.h  MyFile.h  MyHeadDef.h  MyImgSegment.h  MyLine.h  MyMat.h  MyMatColor.h  MyMatGray.h  MyMath.h  MyPoint.h  MyPointArray.h  MyProc.h  MyQTool.h  MyRect.h  MyString.h  MyVideo.h
ndkBuild/: Android.mk  Application.mk  generate.sh
ndkBuild/lib/: VideoStitch.h
ndkBuild/test/: main.cpp  test.cpp
ndkBuild/vcpp15/: ColorShake.h  MyFile.h  MyHeadDef.h  MyLineKB.h  MyMat.h  MyMatColor.h  MyMatGray.h  MyTools_cv.h  MyVideo.h
ocrTest/: CMakeLists.txt  generate.sh  main.cpp
ocrTest/include/: arm_ocr.h  ocr_detect.h  ocr_opt.h  ocr_recog.h
opencv_demo_linux/: CMakeLists.txt  generate.sh  test.cpp
test/: CMakeLists.txt  generate.sh  generate.sh.bak  native-lib.cpp  test.cpp
